@@ -29,6 +29,7 @@ extern void toggle_backlight(void);
 extern void set_wheeldebounce(void);
 extern void set_buttondebounce(void);
 extern void new_record_window(void);
+extern void new_oth_window(void);
 
 static GR_WINDOW_ID menu_wid;
 static GR_GC_ID menu_gc;
@@ -63,13 +64,18 @@ static struct menu_item browse_menu[] = {
 	{0, 0, 0}
 };
 
+static struct menu_item games_menu[] = {
+	{"Othello", ACTION_MENU, new_oth_window},
+	{0, 0, 0}
+};
+
 static struct menu_item extras_menu[] = {
 	{"Voice Record", ACTION_MENU, new_record_window},
 	{"Clock", SUB_MENU_HEADER, 0},
 	{"Contacts", SUB_MENU_HEADER, 0},
 	{"Calendar", SUB_MENU_HEADER, 0},
 	{"Notes", SUB_MENU_HEADER, 0},
-	{"Games", SUB_MENU_HEADER, 0},
+	{"Games", SUB_MENU_HEADER, games_menu},
 	{0, 0, 0}
 };
 
